mavlink-bindgen/tests/snapshots/e2e_snapshots__superseded.xml@superseded.rs.snap
---
source: mavlink-bindgen/tests/e2e_snapshots.rs
expression: contents
---
#![doc = "MAVLink superseded dialect."]
#![doc = ""]
#![doc = "This file was automatically generated, do not edit."]
#![allow(deprecated)]
#![allow(clippy::match_single_binding)]
#![allow(rustdoc::broken_intra_doc_links)]
#[allow(unused_imports)]
use bitflags::{bitflags, Flags};
#[allow(unused_imports)]
use mavlink_core::{types::CharArray, MavlinkVersion, Message, MessageData};
#[allow(unused_imports)]
use num_derive::{FromPrimitive, ToPrimitive};
#[allow(unused_imports)]
use num_traits::{FromPrimitive, ToPrimitive};
#[allow(dead_code)]
#[inline(always)]
fn __mavlink_take_slice<'a>(input: &mut &'a [u8], len: usize) -> &'a [u8] {
    let (field, remaining) = input.split_at(len);
    *input = remaining;
    field
}
#[allow(dead_code)]
#[inline(always)]
fn __mavlink_take<const N: usize>(input: &mut &[u8]) -> [u8; N] {
    let mut value = [0; N];
    value.copy_from_slice(__mavlink_take_slice(input, N));
    value
}
#[allow(dead_code)]
#[inline(always)]
fn __mavlink_put_slice(output: &mut &mut [u8], value: &[u8]) {
    let (field, remaining) = core::mem::take(output).split_at_mut(value.len());
    field.copy_from_slice(value);
    *output = remaining;
}
#[allow(dead_code)]
#[inline(always)]
fn __mavlink_put<const N: usize>(output: &mut &mut [u8], value: [u8; N]) {
    __mavlink_put_slice(output, &value);
}
#[cfg(feature = "arbitrary")]
use arbitrary::Arbitrary;
#[cfg(feature = "serde")]
use serde::{Deserialize, Serialize};
#[cfg(feature = "ts-rs")]
use ts_rs::TS;
#[cfg_attr(feature = "ts-rs", derive(TS))]
#[cfg_attr(feature = "ts-rs", ts(export))]
#[derive(Debug, Copy, Clone, PartialEq, FromPrimitive, ToPrimitive)]
#[cfg_attr(feature = "serde", derive(Serialize, Deserialize))]
#[cfg_attr(feature = "serde", serde(tag = "type"))]
#[cfg_attr(feature = "arbitrary", derive(Arbitrary))]
#[repr(u32)]
#[doc = "Coordinate frames used by MAVLink. Not all frames are supported by all commands, messages, or vehicles."]
pub enum MavFrame {
    #[deprecated = "Use MAV_FRAME_GLOBAL in COMMAND_INT (and elsewhere) as a synonymous replacement. See `MAV_FRAME_GLOBAL` (Superseded since 2024-03)"]
    #[doc = "Global (WGS84) coordinate frame (scaled) + altitude relative to mean sea level (MSL)."]
    MAV_FRAME_GLOBAL_INT = 5,
}
impl MavFrame {
    pub const DEFAULT: Self = Self::MAV_FRAME_GLOBAL_INT;
}
impl Default for MavFrame {
    fn default() -> Self {
        Self::DEFAULT
    }
}
#[cfg_attr(feature = "ts-rs", derive(TS))]
#[cfg_attr(feature = "ts-rs", ts(export))]
#[derive(Debug, Copy, Clone, PartialEq, FromPrimitive, ToPrimitive)]
#[cfg_attr(feature = "serde", derive(Serialize, Deserialize))]
#[cfg_attr(feature = "serde", serde(tag = "type"))]
#[cfg_attr(feature = "arbitrary", derive(Arbitrary))]
#[repr(u32)]
#[deprecated = " See `MAV_CMD_DO_SET_ROI_*` (Superseded since 2018-01)"]
#[doc = "The ROI (region of interest) for the vehicle. This can be                         be used by the vehicle for camera/vehicle attitude alignment (see                         MAV_CMD_NAV_ROI)."]
pub enum MavRoi {
    #[doc = "No region of interest."]
    MAV_ROI_NONE = 0,
    #[doc = "Point toward next waypoint, with optional pitch/roll/yaw offset."]
    MAV_ROI_WPNEXT = 1,
    #[doc = "Point toward given waypoint."]
    MAV_ROI_WPINDEX = 2,
    #[doc = "Point toward fixed location."]
    MAV_ROI_LOCATION = 3,
    #[doc = "Point toward of given id."]
    MAV_ROI_TARGET = 4,
}
impl MavRoi {
    pub const DEFAULT: Self = Self::MAV_ROI_NONE;
}
impl Default for MavRoi {
    fn default() -> Self {
        Self::DEFAULT
    }
}
#[deprecated = "The BATTERY_INFO message is better aligned with UAVCAN messages, and in any case is useful even if a battery is not \"smart\". See `BATTERY_INFO` (Superseded since 2024-02)"]
#[doc = "Smart Battery information (static/infrequent update). Use for updates from: smart battery to flight stack, flight stack to GCS. Use BATTERY_STATUS for the frequent battery updates."]
#[doc = ""]
#[doc = "ID: 370"]
#[derive(Debug, Clone, PartialEq)]
#[cfg_attr(feature = "serde", derive(Serialize, Deserialize))]
#[cfg_attr(feature = "arbitrary", derive(Arbitrary))]
#[cfg_attr(feature = "ts-rs", derive(TS))]
#[cfg_attr(feature = "ts-rs", ts(export))]
pub struct SMART_BATTERY_INFO_DATA {
    #[doc = "Capacity when full according to manufacturer, -1: field not provided."]
    pub capacity_full_specification: i32,
    #[doc = "Capacity when full (accounting for battery degradation), -1: field not provided."]
    pub capacity_full: i32,
    #[doc = "Charge/discharge cycle count. UINT16_MAX: field not provided."]
    pub cycle_count: u16,
    #[doc = "Battery weight. 0: field not provided."]
    pub weight: u16,
    #[doc = "Minimum per-cell voltage when discharging. If not supplied set to UINT16_MAX value."]
    pub discharge_minimum_voltage: u16,
    #[doc = "Minimum per-cell voltage when charging. If not supplied set to UINT16_MAX value."]
    pub charging_minimum_voltage: u16,
    #[doc = "Minimum per-cell voltage when resting. If not supplied set to UINT16_MAX value."]
    pub resting_minimum_voltage: u16,
    #[doc = "Battery ID"]
    pub id: u8,
    #[doc = "Function of the battery"]
    pub battery_function: MavBatteryFunction,
    #[doc = "Type (chemistry) of the battery"]
    pub mavtype: MavBatteryType,
    #[doc = "Serial number in ASCII characters, 0 terminated. All 0: field not provided."]
    #[cfg_attr(feature = "ts-rs", ts(type = "string"))]
    pub serial_number: CharArray<16>,
    #[doc = "Static device name in ASCII characters, 0 terminated. All 0: field not provided. Encode as manufacturer name then product name separated using an underscore."]
    #[cfg_attr(feature = "ts-rs", ts(type = "string"))]
    pub device_name: CharArray<50>,
}
impl SMART_BATTERY_INFO_DATA {
    pub const ENCODED_LEN: usize = 87usize;
    pub const DEFAULT: Self = Self {
        capacity_full_specification: 0_i32,
        capacity_full: 0_i32,
        cycle_count: 0_u16,
        weight: 0_u16,
        discharge_minimum_voltage: 0_u16,
        charging_minimum_voltage: 0_u16,
        resting_minimum_voltage: 0_u16,
        id: 0_u8,
        battery_function: MavBatteryFunction::DEFAULT,
        mavtype: MavBatteryType::DEFAULT,
        serial_number: CharArray::new([0_u8; 16usize]),
        device_name: CharArray::new([0_u8; 50usize]),
    };
    #[cfg(feature = "arbitrary")]
    pub fn random<R: rand::Rng>(rng: &mut R) -> Self {
        use arbitrary::{Arbitrary, Unstructured};
        let mut buf = [0u8; 1024];
        rng.fill_bytes(&mut buf);
        let mut unstructured = Unstructured::new(&buf);
        Self::arbitrary(&mut unstructured).unwrap_or_default()
    }
}
impl Default for SMART_BATTERY_INFO_DATA {
    fn default() -> Self {
        Self::DEFAULT.clone()
    }
}
impl MessageData for SMART_BATTERY_INFO_DATA {
    type Message = MavMessage;
    const ID: u32 = 370u32;
    const NAME: &'static str = "SMART_BATTERY_INFO";
    const EXTRA_CRC: u8 = 75u8;
    const ENCODED_LEN: usize = 87usize;
    fn deser(
        _version: MavlinkVersion,
        __input: &[u8],
    ) -> Result<Self, ::mavlink_core::error::ParserError> {
        let avail_len = __input.len();
        let mut payload_buf;
        let mut buf: &[u8] = if let Some(payload) = __input.get(..Self::ENCODED_LEN) {
            payload
        } else {
            payload_buf = [0; Self::ENCODED_LEN];
            payload_buf[..avail_len].copy_from_slice(__input);
            &payload_buf
        };
        let mut __struct = Self::default();
        __struct.capacity_full_specification =
            <i32>::from_le_bytes(__mavlink_take::<4usize>(&mut buf));
        __struct.capacity_full = <i32>::from_le_bytes(__mavlink_take::<4usize>(&mut buf));
        __struct.cycle_count = <u16>::from_le_bytes(__mavlink_take::<2usize>(&mut buf));
        __struct.weight = <u16>::from_le_bytes(__mavlink_take::<2usize>(&mut buf));
        __struct.discharge_minimum_voltage =
            <u16>::from_le_bytes(__mavlink_take::<2usize>(&mut buf));
        __struct.charging_minimum_voltage =
            <u16>::from_le_bytes(__mavlink_take::<2usize>(&mut buf));
        __struct.resting_minimum_voltage = <u16>::from_le_bytes(__mavlink_take::<2usize>(&mut buf));
        __struct.id = <u8>::from_le_bytes(__mavlink_take::<1usize>(&mut buf));
        let tmp = <u8>::from_le_bytes(__mavlink_take::<1usize>(&mut buf));
        __struct.battery_function =
            FromPrimitive::from_u8(tmp).ok_or(::mavlink_core::error::ParserError::InvalidEnum {
                enum_type: "MavBatteryFunction",
                value: tmp as u64,
            })?;
        let tmp = <u8>::from_le_bytes(__mavlink_take::<1usize>(&mut buf));
        __struct.mavtype =
            FromPrimitive::from_u8(tmp).ok_or(::mavlink_core::error::ParserError::InvalidEnum {
                enum_type: "MavBatteryType",
                value: tmp as u64,
            })?;
        __struct.serial_number = CharArray::new(__mavlink_take::<16usize>(&mut buf));
        __struct.device_name = CharArray::new(__mavlink_take::<50usize>(&mut buf));
        debug_assert!(buf.is_empty());
        Ok(__struct)
    }
    fn ser(&self, version: MavlinkVersion, bytes: &mut [u8]) -> usize {
        let __available = bytes.len();
        if __available < Self::ENCODED_LEN {
            panic!(
                "buffer is too small (need {} bytes, but got {})",
                Self::ENCODED_LEN,
                __available,
            )
        }
        let mut __tmp: &mut [u8] = bytes;
        __mavlink_put::<4usize>(&mut __tmp, (self.capacity_full_specification).to_le_bytes());
        __mavlink_put::<4usize>(&mut __tmp, (self.capacity_full).to_le_bytes());
        __mavlink_put::<2usize>(&mut __tmp, (self.cycle_count).to_le_bytes());
        __mavlink_put::<2usize>(&mut __tmp, (self.weight).to_le_bytes());
        __mavlink_put::<2usize>(&mut __tmp, (self.discharge_minimum_voltage).to_le_bytes());
        __mavlink_put::<2usize>(&mut __tmp, (self.charging_minimum_voltage).to_le_bytes());
        __mavlink_put::<2usize>(&mut __tmp, (self.resting_minimum_voltage).to_le_bytes());
        __mavlink_put::<1usize>(&mut __tmp, (self.id).to_le_bytes());
        __mavlink_put::<1usize>(&mut __tmp, (self.battery_function as u8).to_le_bytes());
        __mavlink_put::<1usize>(&mut __tmp, (self.mavtype as u8).to_le_bytes());
        __mavlink_put_slice(&mut __tmp, &(self.serial_number)[..]);
        __mavlink_put_slice(&mut __tmp, &(self.device_name)[..]);
        if matches!(version, MavlinkVersion::V2) {
            let len = __available - __tmp.len();
            ::mavlink_core::utils::remove_trailing_zeroes(&bytes[..len])
        } else {
            __available - __tmp.len()
        }
    }
}
#[derive(Clone, PartialEq, Debug)]
#[cfg_attr(feature = "serde", derive(Serialize, Deserialize))]
#[cfg_attr(feature = "serde", serde(tag = "type"))]
#[cfg_attr(feature = "arbitrary", derive(Arbitrary))]
#[cfg_attr(feature = "ts-rs", derive(TS))]
#[cfg_attr(feature = "ts-rs", ts(export))]
#[repr(u32)]
pub enum MavMessage {
    #[doc = "Smart Battery information (static/infrequent update). Use for updates from: smart battery to flight stack, flight stack to GCS. Use BATTERY_STATUS for the frequent battery updates."]
    #[doc = ""]
    #[doc = "ID: 370"]
    #[deprecated = "The BATTERY_INFO message is better aligned with UAVCAN messages, and in any case is useful even if a battery is not \"smart\". See `BATTERY_INFO` (Superseded since 2024-02)"]
    SMART_BATTERY_INFO(SMART_BATTERY_INFO_DATA),
}
impl MavMessage {
    pub const fn all_ids() -> &'static [u32] {
        &[370u32]
    }
    pub const fn all_messages() -> &'static [(&'static str, u32)] {
        &[(SMART_BATTERY_INFO_DATA::NAME, SMART_BATTERY_INFO_DATA::ID)]
    }
}
impl Message for MavMessage {
    fn parse(
        version: MavlinkVersion,
        id: u32,
        payload: &[u8],
    ) -> Result<Self, ::mavlink_core::error::ParserError> {
        match id {
            SMART_BATTERY_INFO_DATA::ID => {
                SMART_BATTERY_INFO_DATA::deser(version, payload).map(Self::SMART_BATTERY_INFO)
            }
            _ => Err(::mavlink_core::error::ParserError::UnknownMessage { id }),
        }
    }
    fn message_name(&self) -> &'static str {
        match self {
            Self::SMART_BATTERY_INFO(..) => SMART_BATTERY_INFO_DATA::NAME,
        }
    }
    fn message_id(&self) -> u32 {
        match self {
            Self::SMART_BATTERY_INFO(..) => SMART_BATTERY_INFO_DATA::ID,
        }
    }
    fn message_id_from_name(name: &str) -> Option<u32> {
        match name {
            SMART_BATTERY_INFO_DATA::NAME => Some(SMART_BATTERY_INFO_DATA::ID),
            _ => None,
        }
    }
    fn default_message_from_id(id: u32) -> Option<Self> {
        match id {
            SMART_BATTERY_INFO_DATA::ID => {
                Some(Self::SMART_BATTERY_INFO(SMART_BATTERY_INFO_DATA::default()))
            }
            _ => None,
        }
    }
    #[cfg(feature = "arbitrary")]
    fn random_message_from_id<R: rand::Rng>(id: u32, rng: &mut R) -> Option<Self> {
        match id {
            SMART_BATTERY_INFO_DATA::ID => Some(Self::SMART_BATTERY_INFO(
                SMART_BATTERY_INFO_DATA::random(rng),
            )),
            _ => None,
        }
    }
    fn ser(&self, version: MavlinkVersion, bytes: &mut [u8]) -> usize {
        match self {
            Self::SMART_BATTERY_INFO(body) => body.ser(version, bytes),
        }
    }
    fn ser_with_metadata(&self, version: MavlinkVersion, bytes: &mut [u8]) -> (usize, u32, u8) {
        match self {
            Self::SMART_BATTERY_INFO(body) => (
                body.ser(version, bytes),
                SMART_BATTERY_INFO_DATA::ID,
                SMART_BATTERY_INFO_DATA::EXTRA_CRC,
            ),
        }
    }
    fn extra_crc(id: u32) -> u8 {
        match id {
            SMART_BATTERY_INFO_DATA::ID => SMART_BATTERY_INFO_DATA::EXTRA_CRC,
            _ => 0,
        }
    }
    fn target_system_id(&self) -> Option<u8> {
        match self {
            _ => None,
        }
    }
    fn target_component_id(&self) -> Option<u8> {
        match self {
            _ => None,
        }
    }
}
