mavlink-bindgen/tests/snapshots/e2e_snapshots__undersized_bitflag.xml@undersized_bitflag.rs.snap
---
source: mavlink-bindgen/tests/e2e_snapshots.rs
expression: contents
---
#![doc = "MAVLink undersized_bitflag dialect."]
#![doc = ""]
#![doc = "This file was automatically generated, do not edit."]
#![allow(deprecated)]
#![allow(clippy::match_single_binding)]
#![allow(rustdoc::broken_intra_doc_links)]
#[allow(unused_imports)]
use bitflags::{bitflags, Flags};
#[allow(unused_imports)]
use mavlink_core::{types::CharArray, MavlinkVersion, Message, MessageData};
#[allow(unused_imports)]
use num_derive::{FromPrimitive, ToPrimitive};
#[allow(unused_imports)]
use num_traits::{FromPrimitive, ToPrimitive};
#[allow(dead_code)]
#[inline(always)]
fn __mavlink_take_slice<'a>(input: &mut &'a [u8], len: usize) -> &'a [u8] {
    let (field, remaining) = input.split_at(len);
    *input = remaining;
    field
}
#[allow(dead_code)]
#[inline(always)]
fn __mavlink_take<const N: usize>(input: &mut &[u8]) -> [u8; N] {
    let mut value = [0; N];
    value.copy_from_slice(__mavlink_take_slice(input, N));
    value
}
#[allow(dead_code)]
#[inline(always)]
fn __mavlink_put_slice(output: &mut &mut [u8], value: &[u8]) {
    let (field, remaining) = core::mem::take(output).split_at_mut(value.len());
    field.copy_from_slice(value);
    *output = remaining;
}
#[allow(dead_code)]
#[inline(always)]
fn __mavlink_put<const N: usize>(output: &mut &mut [u8], value: [u8; N]) {
    __mavlink_put_slice(output, &value);
}
#[cfg(feature = "arbitrary")]
use arbitrary::Arbitrary;
#[cfg(feature = "serde")]
use serde::{Deserialize, Serialize};
#[cfg(feature = "ts-rs")]
use ts_rs::TS;
bitflags! { # [cfg_attr (feature = "ts-rs" , derive (TS))] # [cfg_attr (feature = "ts-rs" , ts (export , type = "number"))] # [cfg_attr (feature = "serde" , derive (Serialize , Deserialize))] # [cfg_attr (feature = "arbitrary" , derive (Arbitrary))] # [derive (Debug , Copy , Clone , PartialEq)] pub struct GimbalDeviceCapFlags : u32 { # [doc = "Gimbal device supports a retracted position."] const GIMBAL_DEVICE_CAP_FLAGS_HAS_RETRACT = 1 ; # [doc = "Gimbal device supports to point to a global latitude, longitude, altitude position."] const GIMBAL_DEVICE_CAP_FLAGS_CAN_POINT_LOCATION_GLOBAL = 131072 ; } }
impl GimbalDeviceCapFlags {
    pub const DEFAULT: Self = Self::GIMBAL_DEVICE_CAP_FLAGS_HAS_RETRACT;
}
impl Default for GimbalDeviceCapFlags {
    fn default() -> Self {
        Self::DEFAULT
    }
}
bitflags! { # [cfg_attr (feature = "ts-rs" , derive (TS))] # [cfg_attr (feature = "ts-rs" , ts (export , type = "number"))] # [cfg_attr (feature = "serde" , derive (Serialize , Deserialize))] # [cfg_attr (feature = "arbitrary" , derive (Arbitrary))] # [derive (Debug , Copy , Clone , PartialEq)] # [doc = "This is the `u16` version of `GimbalDeviceCapFlags`. It does not allow flags that exceed `u16::MAX`"] pub struct GimbalDeviceCapFlagsU16 : u16 { # [doc = "Gimbal device supports a retracted position."] const GIMBAL_DEVICE_CAP_FLAGS_HAS_RETRACT = 1 ; } }
impl GimbalDeviceCapFlagsU16 {
    pub const DEFAULT: Self = Self::GIMBAL_DEVICE_CAP_FLAGS_HAS_RETRACT;
}
impl Default for GimbalDeviceCapFlagsU16 {
    fn default() -> Self {
        Self::DEFAULT
    }
}
#[doc = "Information about a low level gimbal. This message should be requested by the gimbal manager or a ground station using MAV_CMD_REQUEST_MESSAGE. The maximum angles and rates are the limits by hardware. However, the limits by software used are likely different/smaller and dependent on mode/settings/etc.."]
#[doc = ""]
#[doc = "ID: 283"]
#[derive(Debug, Clone, PartialEq)]
#[cfg_attr(feature = "serde", derive(Serialize, Deserialize))]
#[cfg_attr(feature = "arbitrary", derive(Arbitrary))]
#[cfg_attr(feature = "ts-rs", derive(TS))]
#[cfg_attr(feature = "ts-rs", ts(export))]
pub struct GIMBAL_DEVICE_INFORMATION_DATA {
    #[doc = "Extended bitmap of gimbal capability flags (32 bit). For backwards compatibility, the lower 16 bits should also be set in cap_flags. Ground stations should prefer this field if non-zero."]
    pub cap_flags2: GimbalDeviceCapFlags,
    #[doc = "Bitmap of gimbal capability flags."]
    #[doc = "This field can not store all possible values of its associated bitflag enum."]
    pub cap_flags: GimbalDeviceCapFlagsU16,
}
impl GIMBAL_DEVICE_INFORMATION_DATA {
    pub const ENCODED_LEN: usize = 6usize;
    pub const DEFAULT: Self = Self {
        cap_flags2: GimbalDeviceCapFlags::DEFAULT,
        cap_flags: GimbalDeviceCapFlagsU16::DEFAULT,
    };
    #[cfg(feature = "arbitrary")]
    pub fn random<R: rand::Rng>(rng: &mut R) -> Self {
        use arbitrary::{Arbitrary, Unstructured};
        let mut buf = [0u8; 1024];
        rng.fill_bytes(&mut buf);
        let mut unstructured = Unstructured::new(&buf);
        Self::arbitrary(&mut unstructured).unwrap_or_default()
    }
}
impl Default for GIMBAL_DEVICE_INFORMATION_DATA {
    fn default() -> Self {
        Self::DEFAULT.clone()
    }
}
impl MessageData for GIMBAL_DEVICE_INFORMATION_DATA {
    type Message = MavMessage;
    const ID: u32 = 283u32;
    const NAME: &'static str = "GIMBAL_DEVICE_INFORMATION";
    const EXTRA_CRC: u8 = 2u8;
    const ENCODED_LEN: usize = 6usize;
    fn deser(
        _version: MavlinkVersion,
        __input: &[u8],
    ) -> Result<Self, ::mavlink_core::error::ParserError> {
        let avail_len = __input.len();
        let mut payload_buf;
        let mut buf: &[u8] = if let Some(payload) = __input.get(..Self::ENCODED_LEN) {
            payload
        } else {
            payload_buf = [0; Self::ENCODED_LEN];
            payload_buf[..avail_len].copy_from_slice(__input);
            &payload_buf
        };
        let mut __struct = Self::default();
        let tmp = <u32>::from_le_bytes(__mavlink_take::<4usize>(&mut buf));
        __struct.cap_flags2 =
            GimbalDeviceCapFlags::from_bits_retain(tmp as <GimbalDeviceCapFlags as Flags>::Bits);
        let tmp = <u16>::from_le_bytes(__mavlink_take::<2usize>(&mut buf));
        __struct.cap_flags = GimbalDeviceCapFlagsU16::from_bits_retain(
            tmp as <GimbalDeviceCapFlagsU16 as Flags>::Bits,
        );
        debug_assert!(buf.is_empty());
        Ok(__struct)
    }
    fn ser(&self, version: MavlinkVersion, bytes: &mut [u8]) -> usize {
        let __available = bytes.len();
        if __available < Self::ENCODED_LEN {
            panic!(
                "buffer is too small (need {} bytes, but got {})",
                Self::ENCODED_LEN,
                __available,
            )
        }
        let mut __tmp: &mut [u8] = bytes;
        __mavlink_put::<4usize>(&mut __tmp, (self.cap_flags2.bits() as u32).to_le_bytes());
        __mavlink_put::<2usize>(&mut __tmp, (self.cap_flags.bits() as u16).to_le_bytes());
        if matches!(version, MavlinkVersion::V2) {
            let len = __available - __tmp.len();
            ::mavlink_core::utils::remove_trailing_zeroes(&bytes[..len])
        } else {
            __available - __tmp.len()
        }
    }
}
#[derive(Clone, PartialEq, Debug)]
#[cfg_attr(feature = "serde", derive(Serialize, Deserialize))]
#[cfg_attr(feature = "serde", serde(tag = "type"))]
#[cfg_attr(feature = "arbitrary", derive(Arbitrary))]
#[cfg_attr(feature = "ts-rs", derive(TS))]
#[cfg_attr(feature = "ts-rs", ts(export))]
#[repr(u32)]
pub enum MavMessage {
    #[doc = "Information about a low level gimbal. This message should be requested by the gimbal manager or a ground station using MAV_CMD_REQUEST_MESSAGE. The maximum angles and rates are the limits by hardware. However, the limits by software used are likely different/smaller and dependent on mode/settings/etc.."]
    #[doc = ""]
    #[doc = "ID: 283"]
    GIMBAL_DEVICE_INFORMATION(GIMBAL_DEVICE_INFORMATION_DATA),
}
impl MavMessage {
    pub const fn all_ids() -> &'static [u32] {
        &[283u32]
    }
    pub const fn all_messages() -> &'static [(&'static str, u32)] {
        &[(
            GIMBAL_DEVICE_INFORMATION_DATA::NAME,
            GIMBAL_DEVICE_INFORMATION_DATA::ID,
        )]
    }
}
impl Message for MavMessage {
    fn parse(
        version: MavlinkVersion,
        id: u32,
        payload: &[u8],
    ) -> Result<Self, ::mavlink_core::error::ParserError> {
        match id {
            GIMBAL_DEVICE_INFORMATION_DATA::ID => {
                GIMBAL_DEVICE_INFORMATION_DATA::deser(version, payload)
                    .map(Self::GIMBAL_DEVICE_INFORMATION)
            }
            _ => Err(::mavlink_core::error::ParserError::UnknownMessage { id }),
        }
    }
    fn message_name(&self) -> &'static str {
        match self {
            Self::GIMBAL_DEVICE_INFORMATION(..) => GIMBAL_DEVICE_INFORMATION_DATA::NAME,
        }
    }
    fn message_id(&self) -> u32 {
        match self {
            Self::GIMBAL_DEVICE_INFORMATION(..) => GIMBAL_DEVICE_INFORMATION_DATA::ID,
        }
    }
    fn message_id_from_name(name: &str) -> Option<u32> {
        match name {
            GIMBAL_DEVICE_INFORMATION_DATA::NAME => Some(GIMBAL_DEVICE_INFORMATION_DATA::ID),
            _ => None,
        }
    }
    fn default_message_from_id(id: u32) -> Option<Self> {
        match id {
            GIMBAL_DEVICE_INFORMATION_DATA::ID => Some(Self::GIMBAL_DEVICE_INFORMATION(
                GIMBAL_DEVICE_INFORMATION_DATA::default(),
            )),
            _ => None,
        }
    }
    #[cfg(feature = "arbitrary")]
    fn random_message_from_id<R: rand::Rng>(id: u32, rng: &mut R) -> Option<Self> {
        match id {
            GIMBAL_DEVICE_INFORMATION_DATA::ID => Some(Self::GIMBAL_DEVICE_INFORMATION(
                GIMBAL_DEVICE_INFORMATION_DATA::random(rng),
            )),
            _ => None,
        }
    }
    fn ser(&self, version: MavlinkVersion, bytes: &mut [u8]) -> usize {
        match self {
            Self::GIMBAL_DEVICE_INFORMATION(body) => body.ser(version, bytes),
        }
    }
    fn ser_with_metadata(&self, version: MavlinkVersion, bytes: &mut [u8]) -> (usize, u32, u8) {
        match self {
            Self::GIMBAL_DEVICE_INFORMATION(body) => (
                body.ser(version, bytes),
                GIMBAL_DEVICE_INFORMATION_DATA::ID,
                GIMBAL_DEVICE_INFORMATION_DATA::EXTRA_CRC,
            ),
        }
    }
    fn extra_crc(id: u32) -> u8 {
        match id {
            GIMBAL_DEVICE_INFORMATION_DATA::ID => GIMBAL_DEVICE_INFORMATION_DATA::EXTRA_CRC,
            _ => 0,
        }
    }
    fn target_system_id(&self) -> Option<u8> {
        match self {
            _ => None,
        }
    }
    fn target_component_id(&self) -> Option<u8> {
        match self {
            _ => None,
        }
    }
}
